// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot for dataset item of status 'annotate' 1`] = `
<status-button-stub type="new" variant="inverted" size="md" class="status-icon status-icon--new" tooltip="undefined">
  <!---->
</status-button-stub>
`;

exports[`matches snapshot for dataset item of status 'archived' 1`] = `
<status-button-stub type="new" variant="inverted" size="md" class="status-icon status-icon--new" tooltip="undefined">
  <!---->
</status-button-stub>
`;

exports[`matches snapshot for dataset item of status 'complete' 1`] = `
<status-button-stub type="new" variant="inverted" size="md" class="status-icon status-icon--new" tooltip="undefined">
  <!---->
</status-button-stub>
`;

exports[`matches snapshot for dataset item of status 'error' 1`] = `
<status-button-stub type="new" variant="inverted" size="md" class="status-icon status-icon--new" tooltip="undefined">
  <!---->
</status-button-stub>
`;

exports[`matches snapshot for dataset item of status 'new' 1`] = `
<status-button-stub type="new" variant="inverted" size="md" class="status-icon status-icon--new" tooltip="undefined">
  <!---->
</status-button-stub>
`;

exports[`matches snapshot for dataset item of status 'processing' 1`] = `
<status-button-stub type="new" variant="inverted" size="md" class="status-icon status-icon--new" tooltip="undefined">
  <!---->
</status-button-stub>
`;

exports[`matches snapshot for dataset item of status 'review' 1`] = `
<status-button-stub type="new" variant="inverted" size="md" class="status-icon status-icon--new" tooltip="undefined">
  <!---->
</status-button-stub>
`;

exports[`matches snapshot for dataset item of status 'uploading' 1`] = `
<status-button-stub type="new" variant="inverted" size="md" class="status-icon status-icon--new" tooltip="undefined">
  <!---->
</status-button-stub>
`;

exports[`matches snapshot when status is annotate with assignee 1`] = `
<status-button-stub type="annotate" variant="inverted" size="md" class="status-icon status-icon--annotate" tooltip="Being annotated by Sam Annotator">
  <team-member-avatar-stub member="[object Object]" class="instance__avatar"></team-member-avatar-stub>
</status-button-stub>
`;

exports[`matches snapshot when status is archived after completed 1`] = `
<status-button-stub type="archived" variant="inverted" size="md" class="status-icon status-icon--archived" tooltip="undefined">
  <!---->
</status-button-stub>
`;

exports[`matches snapshot when status is processing with tags during upload 1`] = `
<status-button-stub type="processing" variant="inverted" size="md" class="status-icon status-icon--processing" tooltip="undefined">
  <!---->
</status-button-stub>
`;

exports[`when assigned to 2.0 workflow matches snapshot for item of status 'annotate' 1`] = `
<status-button-stub type="annotate" variant="inverted" size="md" class="status-icon status-icon--annotate" tooltip="Being annotated by Sam Annotator">
  <team-member-avatar-stub member="[object Object]" class="instance__avatar"></team-member-avatar-stub>
</status-button-stub>
`;

exports[`when assigned to 2.0 workflow matches snapshot for item of status 'review' 1`] = `
<status-button-stub type="review" variant="inverted" size="md" class="status-icon status-icon--review" tooltip="Being reviewed by Sam Annotator">
  <team-member-avatar-stub member="[object Object]" class="instance__avatar"></team-member-avatar-stub>
</status-button-stub>
`;
